@@ -1,3 +1,11 @@
+2009-09-16  Andrés G. Aragoneses  <aaragoneses@novell.com>
+
+	* Mono.Tuner/MoonlightA11yDescriptorGenerator.cs: Speed up by
+	  two orders of magnitude, thanks to caching XPathNavigator
+	  objects and calling Directory.GetFiles() just once.
+
+	* Mono.Tuner/MoonlightA11yApiMarker.cs: Fix typo in comment.
+
 2009-09-10  Andrés G. Aragoneses  <aaragoneses@novell.com>
 
 	* Mono.Tuner/MoonlightA11yApiMarker.cs: Don't mark attributes
